# canary

./: .gitignore  CLAUDE.md  README.md  action.yml  harnest.yaml  pyproject.toml
.claude/: settings.json  settings.local.json.example
.claude/agents/: observer.md  validator.md
.github/workflows/: canary.yml
.harnest/: .gitignore
src/canary/: __init__.py  checkpoints.py  cli.py  config.py  models.py  observer.py  report.py
